--- a/style.scss
+++ b/style.scss
@@ -43,6 +43,9 @@ header a:hover {
   border: solid;
   font-weight: 900;
 }
+main{
+  width: 100%;
+}
 
 .container_background_image {
   position: relative;
@@ -177,69 +180,75 @@ p {
   font-weight: bold;
   transition: background-color 0.3s;
 }
+.image-column{ 
+  height: 160vh;
+}
 
 .contact-link:hover {
   background-color: #0056b3;
 }
 
+.solucoes {
+  display: flex;
+  flex-direction: column;  
+  justify-items:center;
+  justify-content:space-between;
+  text-align: center;
+  height: 130vh;
+  background-color:#d8d8d8 
+  
+}
+.solucoes h3{
+  font-family: Oswald;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 35.57px;
+  text-align: center;
+  color: #0017E9;
+}
 
-.container-cards{
+.solucoes h4{
+  font-family: Oswald;
+  font-size: 44px;
+  font-weight: 500;
+  line-height: 35.57px;
+  text-align: center;  
+}
+.container-cards{ 
+  display: flex;
   justify-content:space-evenly;
-  flex-direction: row;
-  margin-top: 250px;
   flex-direction: column;
   width: 100%;
-  height: 1200px;
-  margin-top: 100px;
+  height: 150vh;
   background-color:#d8d8d8 ;
-  margin-top:  50px;
-  display: flex;
-  flex-wrap:wrap ;
-  left: 53px;
   
 }
 .cards {
   display: flex;
   flex-direction: row;
   width: 100%;
-  flex-wrap: wrap;
   align-items: center;
-  height:1200px;
-  margin-top: 280px; 
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 20px;
-
+  height:90vh;  
+  justify-content: space-around;
+  border: #000000;
 }
 
 .card {
+  display: flex;
+  flex-direction:column;
+  justify-content: space-between;
   background: #fff;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  flex: 1;
-  text-align: center;align-items: center;
-  background: #fff;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  flex: 1;      
   text-align: center;
   align-items: center;
   background: #fff;
   border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  overflow: hidden;  
-  width: 257;
-  height: 484px;
-  top: 281px;
-  margin-left: 63px;
-  gap: 0px;
+  width: 25%;
+  height: 80vh;  
   opacity: 0px;
-  left: 10px;
-  right: 10px;
-  padding: 10px;
-
+  
+  
    
 }
 
