--- a/style.scss
+++ b/style.scss
@@ -186,7 +186,6 @@ p {
 .container-cards{
   justify-content:space-evenly;
   flex-direction: row;
-  flex-direction: column;
   width: 100%;
   height:125vh;
   background-color:#d8d8d8 ;
@@ -262,15 +261,79 @@ p {
   padding: 0 10px 20px;
 }
 
-.call-to-action{
-  display: flex;
-  flex-direction: column;
-  width: 346px;
-  height: 47px;
-  top: 112px;
-  margin-top: 112px;
-  gap: 0px;
-  opacity: 0px;
+
+.atendimento {
+  display: grid;
+  width: 100%;
+  
+  
 
 }
-//.call-to-action h3{ }
+
+.contato {
+  display: flex;
+  width: 100%;
+  
+  
+  
+}
+
+.atendimento, .fale-conosco {
+  width: 100%;
+}
+
+.atendimento h2, .fale-conosco h2 {
+  color: blue;
+  font-size: 1.5em;
+  text-align: center;
+}
+
+.unidades {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+
+}
+
+.unidades figure {
+  flex: 1 1 calc(50% - 15px); /* Tamanho de cada unidade */
+  text-align: center;
+}
+
+.unidades img {
+  max-width: 100%;
+  height: auto;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.fale-conosco form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.fale-conosco form label {
+  font-weight: bold;
+}
+
+.fale-conosco form input,
+.fale-conosco form textarea {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.fale-conosco form button {
+  background-color: blue;
+  color: white;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.fale-conosco form button:hover {
+  background-color: darkblue;
+}
